--- a/www/style.css
+++ b/www/style.css
@@ -5,22 +5,28 @@ html, body {
     font-family: Arial;
     font-size: 14px;
     color: #333;
+    overflow-x: hidden;
 }
 
 h1 {
     font-size: 36px;
 }
 
+input {
+	outline: none;
+}
+
 div.contentContainer {
-    height: 90%;
-    width: 90%;
-    margin: 5%;
+    height: 100%;
+    width: 100%;
 }
 
 div.content {
     height: 100%;
     width: 100%;
 }
+
+/* v LOGIN PAGE v */
 
 div.loginScreenLogo {
     height: 200px;
@@ -59,5 +65,106 @@ input.userInput:hover {
 
 input.userInput:active, input.userInput:focus {
 	border-color: #388E8E;
-	outline: none;
 }
+
+/* ^ LOGIN PAGE ^ */
+
+/* v CHAT PAGE v */
+
+div.chatContainer {
+    height: 100%;
+    width: 800px;
+    margin: auto;
+    background-image: url("http://www.pixeden.com/media/k2/galleries/165/001-subtle-light-pattern-background-texture-vol5.jpg");
+}
+
+div.chat {
+    height: 100%;
+    width: 100%;
+}
+
+div.chat>h2 {
+    margin-top: 16px;
+    margin-left: 16px;
+    display: inline-block;
+}
+
+div.chat>ul.chatLog {
+    width: 100%;
+    margin-top: 50px;
+    list-style-type: none;
+    padding: 0;
+    background: rgba(77,77,77,0.4);
+}
+
+ul.chatLog>li>span {
+	margin-left: 30px;
+	font-weight: bold;
+	color: #444;
+}
+
+li.message {
+	height: 30px;
+	line-height: 30px;
+}
+
+li.message.chatMessage {
+	font-size: 20px;
+	font-family: Calibri;
+}
+
+li.message.chatMessage.even {
+    background-color: rgba(102,165,173,0.6);
+}
+
+li.message.chatMessage.odd {
+    background-color: rgba(89,130,52,0.6);
+}
+
+li.message.consoleMessage {
+	background-color: rgba(177,177,177,0.6);
+	text-align: center;	
+}
+
+li.message.consoleMessage>span {
+	font-weight: normal;
+}
+
+
+div.chatContainer>div.chatHeader {
+    height: 45px;
+    line-height: 45px;
+    width: 800px;
+    position: fixed;
+    top: 6px;
+    margin: 0;
+    background: #FFF;
+}
+
+div.chatHeader>span {
+    margin-left: 1.9%;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+div.chatContainer>div.messageInputDiv {
+    height: 45px;
+    width: 800px;
+    position: fixed;
+    bottom: 12px;
+    margin: 0;
+    background: #FFF;
+}
+
+div.messageInputDiv>input.messageInput {
+    height: 100%;
+    width: 96%;
+    margin-left: 1.9%;
+    font-size: 20px;
+    background: none;
+    border: none;
+}
+
+
+
+/* ^ CHAT PAGE ^ */
