--- a/www/style.css
+++ b/www/style.css
@@ -5,7 +5,7 @@ html, body {
     font-family: Arial;
     font-size: 14px;
     color: #333;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 h1 {
@@ -67,6 +67,16 @@ input.userInput:active, input.userInput:focus {
 	border-color: #388E8E;
 }
 
+input.userInput.go {
+    width: 160px;
+    border: solid 2px #388E8E;
+    background: #388E8E;
+    color: #DDD;
+    font-size: 14px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
 /* ^ LOGIN PAGE ^ */
 
 /* v CHAT PAGE v */
@@ -77,14 +87,16 @@ div.page.chat {
 
 div.chatContainer {
     height: 100%;
-    width: 800px;
+    width: 90%;
+    max-width: 800px;
     margin: auto;
     background-image: url("http://www.pixeden.com/media/k2/galleries/165/001-subtle-light-pattern-background-texture-vol5.jpg");
 }
 
 div.chat {
-    height: 100%;
+    height: 94%;
     width: 100%;
+    margin-top: 3%;
 }
 
 div.chat>h2 {
@@ -94,11 +106,13 @@ div.chat>h2 {
 }
 
 div.chat>ul.chatLog {
+    height: 100%;
     width: 100%;
-    margin-top: 50px;
     list-style-type: none;
     padding: 0;
-    background: rgba(77,77,77,0.4);
+    margin: 0;
+    background: rgba(77,77,77,0.1);
+    overflow-y: scroll;
 }
 
 ul.chatLog>li>span {
@@ -135,13 +149,10 @@ li.message.consoleMessage>span {
 }
 
 
-div.chatContainer>div.chatHeader {
+div.chat>div.chatHeader {
     height: 45px;
     line-height: 45px;
-    width: 800px;
-    position: fixed;
-    top: 6px;
-    margin: 0;
+    width: 100%;
     background: #FFF;
 }
 
@@ -151,24 +162,35 @@ div.chatHeader>span {
     font-weight: bold;
 }
 
-div.chatContainer>div.messageInputDiv {
+div.chat>div.messageInputDiv {
     height: 45px;
-    width: 800px;
-    position: fixed;
-    bottom: 12px;
+    width: 100%;
+    bottom: 0;
     margin: 0;
     background: #FFF;
 }
 
 div.messageInputDiv>input.messageInput {
     height: 100%;
-    width: 96%;
+    width: 80%;
     margin-left: 1.9%;
     font-size: 20px;
     background: none;
     border: none;
 }
 
-
+div.messageInputDiv>input.messageInput.send {
+    height: 35px;
+    line-height: 26px;
+    width: 35px;
+    margin-top: 5px;
+    margin-right: 5px;
+    border: solid 2px #388E8E;
+    background: #388E8E;
+    color: #DDD;
+    font-size: 22px;
+    border-radius: 4px;
+    cursor: pointer;
+}
 
 /* ^ CHAT PAGE ^ */
