--- a/www/style.css
+++ b/www/style.css
@@ -54,6 +54,7 @@ div.logoTopBar {
     height: 50px;
     width: 100%;
     background: rgba(255,255,255,0.9);
+    box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.75);
 }
 
 div.logoTopBar>img.companyLogo {
@@ -265,6 +266,30 @@ div.logoTopBar>img.menuBars {
     opacity: 0.9;
     display: none;
     cursor: pointer;
+}
+
+div#sidebar {
+    height: 100%;
+    width: 0;
+    position: absolute;
+    right: 0;
+    background: rgba(255,255,255,0.9);
+    box-shadow: -2px 5px 3px 0px rgba(0,0,0,0.75);
+    text-align: center;
+}
+
+div#sidebar>div.profilePicture {
+    height: 160px;
+    width: 160px;
+    display: inline-block;
+    background: purple;
+    border-radius: 100px;
+}
+
+div.profilePicture>img.displayPicture.hoverZoomLink {
+    height: 100%;
+    width: 100%;
+    display: inline-block;
 }
 
 /* ^ MENU PAGE ^ */
