--- a/www/style.css
+++ b/www/style.css
@@ -331,6 +331,14 @@ ul.friendsList>li.friend>span {
     margin-left: 12px;
 }
 
+div.logoTopBar>span.usernameGreeting {
+    height: 50px;
+    line-height: 50px;
+    display: inline-block;
+    font-size: 18px;
+    vertical-align: top;
+}
+
 /* ^ MENU PAGE ^ */
 
 /* v CHAT PAGE v */
