--- a/www/style.css
+++ b/www/style.css
@@ -383,10 +383,23 @@ div.menuContent {
     margin-right: 210px;
 }
 
-div.menuContent>div.chatColumn {
-    height: 100%;
-    width: 45%;
-    display: inline-block;
+div.userLogout {
+    height: 48px;
+    line-height: 48px;
+    width: 80%;
+    margin-left: 10%;
+    position: absolute;
+    bottom: 26px;
+    font-size: 18px;
+    border-radius: 5px;
+    background: #0C75C5;
+    opacity: 0.8;
+    color: #FFF;
+    cursor: pointer;
+}
+
+div.userLogout:hover {
+    opacity: 1;
 }
 
 /* ^ MENU PAGE ^ */
