--- a/www/style.css
+++ b/www/style.css
@@ -296,19 +296,28 @@ div.profilePicture>img.displayPicture {
 }
 
 div.friendsListContainer {
-    height: 30%;
+    height: 270px;
     width: 100%;
     position: absolute;
-    bottom: 0;
-    background: pink;
+    bottom: 80px;
     overflow-y: scroll;
+    text-align: left;
+}
+
+div.friendsListContainer>span {
+    margin-left: 6px;
+    display: inline-block;
+    font-size: 16px;
+    margin-bottom: 6px;
 }
 
 div.friendsListContainer>ul.friendsList {
-    height: 100%;
-    width: 100%;
+    height: 240px;
+    width: 90%;
     padding: 0;
     margin: 0;
+    margin-left: 5%;
+    overflow-y: scroll;
     list-style: none;
 }
 
